# GoIT_Web_HomeWork_10

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
hw_project/quotes/: admin.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: author.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: admin.py  forms.py  models.py  urls.py  views.py
hw_project/users/migrations/: 0001_initial.py  0002_quote.py
hw_project/users/templates/users/: add_author.html  add_quote.html  login.html  logout.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
